--- a/app/index.html
+++ b/app/index.html
@@ -83,8 +83,8 @@
     <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBOIFN7R8DHFD4xx93E9HsxwowvrW-H5Zg&signed_in=true&callback=initialize">
     </script>
-    <script src="bower_components/jquery/dist/jquery.js"></script>
-    <script src="bower_components/lodash/lodash.min.js"></script>
+    <script src="../bower_components/jquery/dist/jquery.js"></script>
+    <script src="../bower_components/lodash/lodash.min.js"></script>
 
     <script src="scripts/main.js"></script>
   </body>
