--- a/app/index.html
+++ b/app/index.html
@@ -49,13 +49,13 @@
 
       .splash {
         padding: 10px;
-        width: 200px;
-        height: 50%;
+        width: 500px;
+        height: 90%;
         position: absolute;
-        top: 25%;
+        top: 5%;
         left: 50%;
 
-        margin: -150px 0 0 -100px;
+        margin-left: -250px;
         background: white
       }
        .splash h1, .splash p {text-align: center;}
@@ -71,13 +71,13 @@
     </div>
     <div class="splash">
         <h1>GEO SLIDESHOW</h1>
+        <hr>
         <ul>
           <li><strong>j</strong> for next</li>
           <li><strong>k</strong> for previous</li>
           <li><strong>zoom out</strong> to see all place you visited </li>
           <li><strong>zoom out</strong> to see all place you visited </li>
         </ul>
-
         <p> click to close this window</p>
     </div>
     <script async defer
