--- a/app/index.html
+++ b/app/index.html
@@ -58,7 +58,12 @@
         margin-left: -250px;
         background: white
       }
+
+      .hide {
+        display: none;
+      }
        .splash h1, .splash p {text-align: center;}
+      }
     </style>
   </head>
   <body>
@@ -69,12 +74,14 @@
       <p class="name"></p>
       <p class="description short"></p>
     </div>
-    <div class="splash">
+    <div class="splash hide">
         <h1>GEO SLIDESHOW</h1>
         <hr>
         <ul>
           <li><strong>j</strong> for next</li>
           <li><strong>k</strong> for previous</li>
+          <li><strong>s</strong> to open panorama in a new tab</li>
+
           <li><strong>zoom out</strong> to see all place you visited </li>
         </ul>
         <p> click to close this window</p>
