adding loading message

--- a/app/index.html
+++ b/app/index.html
@@ -67,7 +67,7 @@
     </style>
   </head>
   <body>
-
+    loading … (reload if too long)
     <div id="pano"></div>
     <div id="map"></div>
     <div id="info">
