--- a/app/index.html
+++ b/app/index.html
@@ -78,11 +78,12 @@
         <h1>GEO SLIDESHOW</h1>
         <hr>
         <ul>
-          <li><strong>j</strong> for next</li>
-          <li><strong>k</strong> for previous</li>
-          <li><strong>s</strong> to open panorama in a new tab</li>
+          <li>Starting point is random.</li>
+          <li>Press <strong>j</strong> for next</li>
+          <li>Press <strong>k</strong> for previous</li>
+          <li>Press <strong>s</strong> to open panorama in a new tab</li>
 
-          <li><strong>zoom out</strong> to see all place you visited </li>
+          <li><strong>Zoom out</strong> to see all place you visited </li>
         </ul>
         <p> click to close this window</p>
     </div>
