--- a/app/index.html
+++ b/app/index.html
@@ -12,24 +12,33 @@
     </div>
 
     <div class="container-fluid">
-
+      <div class="instagram"></div>
       <div id="controls" class="row">
-        <div class="col-sm-2">
+        <div class="col-sm-1">
           <input  id="currentId" class="form-control"  type="number" value="0" maxlength="4" size="4" step="1" >
         </div>
-        <div class="col-sm-10">
+        <div class="col-sm-8">
           <input id="slideId" class="form-control" type="range"  value="0" min="0" max="500" step="1" />
+        </div>
+
+        <div class="col-sm-1">
+          <input  id="currentDistance" class="form-control"  type="number" value="0" maxlength="4" size="4" step="1" >
+        </div>
+        <div class="col-sm-2">
+          <input id="slideDistance" class="form-control" type="range"  value="0" min="100" max="5000" step="50" />
         </div>
       </div>
 
       <div class="row">
-        <div class="col-sm-9" id="activity"></div>
-        <div class="col-sm-2" id="pointInfo"></div>
+        <div class="col-sm-7" id="instagramFeed"></div>
+        <div class="col-sm-4">
+          <div id="pointInfo"></div>
+          <div id="activity"></div>
+        </div>
+
       </div>
 
     </div>
-
-
     <div class="splash hide">
         <h1>GEO SLIDESHOW</h1>
         <hr>
@@ -49,6 +58,20 @@
 
     <script id="activity" type="text/x-handlebars-template">
       <div class="row">
+
+        <h5>hashtags : {{#each point.hashtags}} {{this}} {{/each}}</h5>
+      </div>
+
+      <div class="row">
+        <h5>status ({{point.statuses.length}})</h5>
+        {{#each point.statuses}}
+          <h6>{{user.name}} (@{{user.screen_name}})<br/>{{created_at}}</h6>
+          <p>{{text}} | {{#each entities.media}}<img src="{{media_url}}" width="25px" />{{/each}}</p>
+          </hr>
+        {{/each}}
+      </div>
+
+      <div class="row">
         <h5>images</h5>
         {{#each point.statuses}}
           {{#each entities.media}}
@@ -56,30 +79,18 @@
           {{/each}}
         {{/each}}
       </div>
-      <div class="row">
-        <h5>hashtags :
-        {{#each point.hashtags}}
-          {{this}}
-        {{/each}}
-        </h5>
-      </div>
-      <div class="row">
-        <h5>status ({{point.statuses.length}})</h5>
-        {{#each point.statuses}}
-          <li>{{text}}</li>
-          {{#each entities.media}}
-              {{media_url}}
-              <img src="{{media_url}}" width="25px" />
-          {{/each}}
-        {{/each}}
-      </div>
+
     </script>
 
     <script id="pointInfo" type="text/x-handlebars-template">
-      {{debug}}
-      <h5>{{point.name}}</h5>
-      <input type="text" value="{{point.lat}},{{point.lng}}"/>
+      <h5><input type="text" value="{{point.lat}},{{point.lng}}"/>
+ {{point.name}}</h5>
       <p>{{{point.description}}} </p>
+
+    </script>
+
+    <script id="instagramFeed" type="text/x-handlebars-template">
+      {{#each data}}<a href="{{images.standard_resolution.url}}"><img src="{{images.thumbnail.url}}"></a>{{/each}}
     </script>
 
   </body>
