--- a/app/index.html
+++ b/app/index.html
@@ -6,62 +6,27 @@
     <link rel="stylesheet" type="text/css" href="assets/css/screen.css">
   </head>
   <body>
-    <div class="row" id="geo" >
-      <div id="pano" class="col-sm-8"></div>
-      <div id="map"  class="col-sm-4"></div>
+    <div class="instagram"></div>
+
+    <div id="instagramFeed" class="col-sm-12"></div>
+    <div id="pano" class="col-sm-12"></div>
+    <div id="map"  class="col-sm-12"></div>
+
+    <div id="controls" class="col-sm-12">
+      <div class="col-sm-2"><input  id="currentId" class="form-control" type="number" maxlength="4" size="4" step="1" ></div>
+      <div class="col-sm-5"><input id="slideId" class="form-control" type="range" min="0" max="500" step="1" /></div>
+      <div class="col-sm-2"><input  id="currentDistance" class="form-control" type="number" maxlength="4" size="4" step="1" ></div>
+      <div class="col-sm-3"><input id="slideDistance" class="form-control" type="range"  min="100" max="5000" step="50" /></div>
     </div>
-      <div class="instagram"></div>
 
-    <div class="container-fluid">
-      <div id="controls" class="row">
-        <div class="col-sm-1">
-          <input  id="currentId" class="form-control"  type="number" value="0" maxlength="4" size="4" step="1" >
-        </div>
-        <div class="col-sm-8">
-          <input id="slideId" class="form-control" type="range"  value="0" min="0" max="500" step="1" />
-        </div>
-
-        <div class="col-sm-1">
-          <input  id="currentDistance" class="form-control"  type="number" value="0" maxlength="4" size="4" step="1" >
-        </div>
-        <div class="col-sm-2">
-          <input id="slideDistance" class="form-control" type="range"  value="0" min="100" max="5000" step="50" />
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-sm-7" id="instagramFeed"></div>
-        <div class="col-sm-4">
-          <div id="pointInfo"></div>
-          <div id="activity"></div>
-        </div>
-
-      </div>
-
-    </div>
-    <div class="splash hide">
-        <h1>GEO SLIDESHOW</h1>
-        <hr>
-        <ul>
-          <li>Starting point is random.</li>
-          <li>Press <strong>j</strong> for next</li>
-          <li>Press <strong>k</strong> for previous</li>
-          <li>Press <strong>s</strong> to open panorama in a new tab</li>
-
-          <li><strong>Zoom out</strong> to see all place you visited </li>
-        </ul>
-        <p> click to close this window</p>
-    </div>
+    <div class="col-sm-12" id="activity"></div>
 
     <script src="assets/js/lib.min.js"></script>
     <script src="assets/js/main.js"></script>
 
     <script id="activity" type="text/x-handlebars-template">
-      <div class="row">
-        <h5>hashtags : {{#each point.hashtags}} {{this}} {{/each}}</h5>
-      </div>
-
-      <div class="row">
+      <div class="col col-sm-2"><h5>hashtags : {{#each point.hashtags}} {{this}} {{/each}}</h5></div>
+      <div class="col col-sm-4">
         <h5>status ({{point.statuses.length}})</h5>
         {{#each point.statuses}}
           <h6>{{user.name}} (@{{user.screen_name}})<br/>{{created_at}}</h6>
@@ -70,7 +35,7 @@
         {{/each}}
       </div>
 
-      <div class="row">
+      <div class="col col-sm-3">
         <h5>images</h5>
         {{#each point.statuses}}
           {{#each entities.media}}
@@ -79,13 +44,13 @@
         {{/each}}
       </div>
 
+      <div id="pointInfo" class="col-sm-3 col"></div>
+
     </script>
 
     <script id="pointInfo" type="text/x-handlebars-template">
-      <h5><input type="text" value="{{point.lat}},{{point.lng}}"/>
- {{point.name}}</h5>
+      <h5><input type="text" value="{{point.lat}},{{point.lng}}"/>{{point.name}}</h5>
       <p>{{{point.description}}} </p>
-
     </script>
 
     <script id="instagramFeed" type="text/x-handlebars-template">
