tilt, layout, debug, moves

--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="instagram"></div>
 
-    <div id="instagramFeed" class="col-sm-12"></div>
+    <div id="instagramFeed"></div>
     <div id="pano" class="col-sm-12"></div>
     <div id="map"  class="col-sm-12"></div>
 
