--- a/app/index.html
+++ b/app/index.html
@@ -19,10 +19,8 @@
       <div class="col-sm-3"><input id="slideDistance" class="form-control" type="range"  min="100" max="5000" step="50" /></div>
     </div>
 
-    <div class="col-sm-12" id="activity"></div>
+    <div class="col-sm-12" id="pointInfo"></div>
 
-    <script src="assets/js/lib.min.js"></script>
-    <script src="assets/js/main.js"></script>
 
     <script id="activity" type="text/x-handlebars-template">
       <div class="col col-sm-2"><h5>hashtags : {{#each point.hashtags}} {{this}} {{/each}}</h5></div>
@@ -43,18 +41,21 @@
           {{/each}}
         {{/each}}
       </div>
-
-      <div id="pointInfo" class="col-sm-3 col"></div>
-
     </script>
 
     <script id="pointInfo" type="text/x-handlebars-template">
-      <h5><input type="text" value="{{point.lat}},{{point.lng}}"/>{{point.name}}</h5>
-      <p>{{{point.description}}} </p>
+      <h5><input type="text" value="{{point.lat}},{{point.lng}}"/> {{point.name}}</h5>
+      <p>{{{point.description}}}</p>
     </script>
 
     <script id="instagramFeed" type="text/x-handlebars-template">
       {{#each data}}<a href="{{images.standard_resolution.url}}"><img src="{{images.thumbnail.url}}"></a>{{/each}}
     </script>
+
+    <script src="assets/js/lib.min.js"></script>
+    <script src="assets/js/main.js"></script>
+    <script async defer src="http://maps.googleapis.com/maps/api/js?v=3&sensor=false&callback=initialize">
+    </script>
+
   </body>
 </html>
