--- a/app/index.html
+++ b/app/index.html
@@ -14,9 +14,9 @@
 
     <div id="controls" class="col-sm-12">
       <div class="col-sm-2"><input  id="currentId" class="form-control" type="number" maxlength="4" size="4" step="1" ></div>
-      <div class="col-sm-5"><input id="slideId" class="form-control" type="range" min="0" max="500" step="1" /></div>
+      <div class="col-sm-6"><input id="slideId" class="form-control" type="range" min="0" max="500" step="1" /></div>
       <div class="col-sm-2"><input  id="currentDistance" class="form-control" type="number" maxlength="4" size="4" step="1" ></div>
-      <div class="col-sm-3"><input id="slideDistance" class="form-control" type="range"  min="100" max="5000" step="50" /></div>
+      <div class="col-sm-2"><input id="slideDistance" class="form-control" type="range"  min="100" max="5000" step="50" /></div>
     </div>
 
     <div class="col-sm-12" id="pointInfo"></div>
@@ -54,8 +54,7 @@
 
     <script src="assets/js/lib.min.js"></script>
     <script src="assets/js/main.js"></script>
-    <script async defer src="http://maps.googleapis.com/maps/api/js?v=3&sensor=false&callback=initialize">
+    <script async defer src="http://maps.googleapis.com/maps/api/js?v=3&callback=initialize">
     </script>
-
   </body>
 </html>
