--- a/app/index.html
+++ b/app/index.html
@@ -9,22 +9,22 @@
     <div class="instagram"></div>
 
     <div id="instagramFeed"></div>
-    <div id="pano" class="col-sm-12"></div>
-    <div id="map"  class="col-sm-12"></div>
+    <div id="pano" class="col-xs-12"></div>
+    <div id="map"  class="col-xs-12"></div>
 
-    <div id="controls" class="col-sm-12">
-      <div class="col-sm-2"><input  id="currentId" class="form-control" type="number" maxlength="4" size="4" step="1" ></div>
-      <div class="col-sm-6"><input id="slideId" class="form-control" type="range" min="0" max="500" step="1" /></div>
-      <div class="col-sm-2"><input  id="currentDistance" class="form-control" type="number" maxlength="4" size="4" step="1" ></div>
-      <div class="col-sm-2"><input id="slideDistance" class="form-control" type="range"  min="100" max="5000" step="50" /></div>
+    <div id="controls" class="col-xs-12">
+      <div class="col-xs-2"><input  id="currentId" class="form-control" type="number" maxlength="4" size="4" step="1" ></div>
+      <div class="col-xs-6"><input id="slideId" class="form-control" type="range" min="0" max="500" step="1" /></div>
+      <div class="col-xs-2"><input  id="currentDistance" class="form-control" type="number" maxlength="4" size="4" step="1" ></div>
+      <div class="col-xs-2"><input id="slideDistance" class="form-control" type="range"  min="100" max="5000" step="50" /></div>
     </div>
 
-    <div class="col-sm-12" id="pointInfo"></div>
+    <div class="col-xs-12" id="pointInfo"></div>
 
 
     <script id="activity" type="text/x-handlebars-template">
-      <div class="col col-sm-2"><h5>hashtags : {{#each point.hashtags}} {{this}} {{/each}}</h5></div>
-      <div class="col col-sm-4">
+      <div class="col col-xs-2"><h5>hashtags : {{#each point.hashtags}} {{this}} {{/each}}</h5></div>
+      <div class="col col-xs-4">
         <h5>status ({{point.statuses.length}})</h5>
         {{#each point.statuses}}
           <h6>{{user.name}} (@{{user.screen_name}})<br/>{{created_at}}</h6>
@@ -33,11 +33,11 @@
         {{/each}}
       </div>
 
-      <div class="col col-sm-3">
+      <div class="col col-xs-3">
         <h5>images</h5>
         {{#each point.statuses}}
           {{#each entities.media}}
-            <a href="{{media_url}}"> <img src="{{media_url}}" class="col-sm-3" /> </a>
+            <a href="{{media_url}}"> <img src="{{media_url}}" class="col-xs-3" /> </a>
           {{/each}}
         {{/each}}
       </div>
@@ -49,7 +49,7 @@
     </script>
 
     <script id="instagramFeed" type="text/x-handlebars-template">
-      {{#each data}}<a href="{{images.standard_resolution.url}}"><img src="{{images.thumbnail.url}}"></a>{{/each}}
+      {{#each data}}<a href="{{images.standard_resolution.url}}"><img class="instaImage" src="{{images.thumbnail.url}}"></a>{{/each}}
     </script>
 
     <script src="assets/js/lib.min.js"></script>
