--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
     <div id="instagramFeed"></div>
     <div id="pano" class="col-xs-12"></div>
     <div id="map"  class="col-xs-12"></div>
+    <div id="pathway" class="col-xs-12" ></div>
 
     <div id="controls" class="col-xs-12">
       <div class="col-xs-2"><input  id="currentId" class="form-control" type="number" maxlength="4" size="4" step="1" ></div>
@@ -18,9 +19,7 @@
       <div class="col-xs-2"><input  id="currentDistance" class="form-control" type="number" maxlength="4" size="4" step="1" ></div>
       <div class="col-xs-2"><input id="slideDistance" class="form-control" type="range"  min="100" max="5000" step="50" /></div>
     </div>
-
     <div class="col-xs-12" id="pointInfo"></div>
-
 
     <script id="activity" type="text/x-handlebars-template">
       <div class="col col-xs-2"><h5>hashtags : {{#each point.hashtags}} {{this}} {{/each}}</h5></div>
