--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,13 @@
   </head>
   <body>
 
+    <div id="tonerMap"></div>
+    <div id="world"></div>
+    <div id="map"></div>
+    <div id="pano"></div>
+    <div id="instagramFeed"></div>
+
+    <div class="instagram"></div>
 
     <div id="controls">
       <div class="col-xs-1"><input  id="currentId" class="form-control" type="number" maxlength="4" size="4" step="1" ></div>
@@ -15,12 +22,7 @@
       <div class="col-xs-2"><input id="slideDistance" class="form-control" type="range"  min="100" max="5000" step="50" /></div> -->
       <div id="pointInfo"></div>
     </div>
-    <div id="pathway"></div>
-    <div id="map"></div>
-    <div id="pano"></div>
-    <div id="instagramFeed"></div>
 
-    <div class="instagram"></div>
 
     <script id="activity" type="text/x-handlebars-template">
       <div class="col col-xs-2"><h5>hashtags : {{#each point.hashtags}} {{this}} {{/each}}</h5></div>
@@ -47,7 +49,7 @@
       <div class="col-xs-2">
         <input type="text" class="form-control" value="{{point.lat}},{{point.lng}}"/>
       </div>
-      <div class="col-xs-4">
+      <div class="col-xs-4 title">
         <h5>{{point.name}}</h5>
         <p>{{{point.description}}}</p>
       </div>
@@ -60,7 +62,10 @@
 
     <script src="assets/js/lib.min.js"></script>
     <script src="assets/js/main.js"></script>
+
     <script async defer src="http://maps.googleapis.com/maps/api/js?v=3&callback=initialize">
+    <script src="assets/js/tile.stamen.js"></script>
+
     </script>
   </body>
 </html>
