--- a/app/index.html
+++ b/app/index.html
@@ -61,10 +61,12 @@
     </script>
 
     <script src="assets/js/lib.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js"></script>
+
+    <script type="text/javascript" src="http://maps.stamen.com/js/tile.stamen.js?v1.3.0"></script>
     <script src="assets/js/main.js"></script>
 
-    <script async defer src="http://maps.googleapis.com/maps/api/js?v=3&callback=initialize">
-    <script src="assets/js/tile.stamen.js"></script>
+
 
     </script>
   </body>
