--- a/app/index.html
+++ b/app/index.html
@@ -18,9 +18,7 @@
     <div id="controls">
       <div class="col-xs-1"><input  id="currentId" class="form-control" type="number" maxlength="4" size="4" step="1" ></div>
       <div class="col-xs-4"><input id="slideId" class="form-control" type="range" min="0" max="500" step="1" /></div>
-<!--       <div class="col-xs-2"><input  id="currentDistance" class="form-control" type="number" maxlength="4" size="4" step="1" ></div>
-      <div class="col-xs-2"><input id="slideDistance" class="form-control" type="range"  min="100" max="5000" step="50" /></div> -->
-      <div id="pointInfo"></div>
+c      <div id="pointInfo"></div>
     </div>
 
 
