--- a/app/index.html
+++ b/app/index.html
@@ -56,7 +56,7 @@
       </div>
 
       {{#if point.bookmarked}}
-       <div class="ccol-xs-2 bookmarked"> B </div>
+       <div class="col-xs-2 bookmarked"> B </div>
       {{/if}}
 
     </script>
